...
                    checked = isShakeGesturesEnabled,
                    onCheckedChange = onShakeGesturesToggled,
                    mainTextColor = mainTextColor,
                    designStyle = designStyle,
                    surfaceAccent = surfaceAccent,
                    isDarkTextEnabled = isDarkTextEnabled,
                    switchTestTag = "shake_gestures_switch"
                )
            }
            if (isShakeGesturesEnabled) {
                item {
                    EditActionSelectorItem(
                        label = stringResource(R.string.gestures_on_double_shake),
...
